--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <img class="top-cloud" src="S:\Web Development projects\CSS - My Site\images\cloud.png" alt="cloud-img">
     <h1>I'm Shivam.</h1>
     <h2>a <span class="pro">pro</span>grammer.</h2>
-    <img class="bottom-cloud" src="S:\Web Development projects\CSS - My Site\images\cloud.png" alt="cloud-img">
-    <img src="S:\Web Development projects\CSS - My Site\images\mountain.png" alt="mountain-img">
+    <img class="bottom-cloud" src="images\cloud.png" alt="cloud-img">
+    <img src="images\mountain.png" alt="mountain-img">
   </div>
   <div class="middle-container">
     <div class="profile">
