--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <div class="top1-container">
-    <img class="top-cloud" src="S:\Web Development projects\CSS - My Site\images\cloud.png" alt="cloud-img">
+    <img class="images\cloud.png" alt="cloud-img">
     <h1>I'm Shivam.</h1>
     <h2>a <span class="pro">pro</span>grammer.</h2>
     <img class="bottom-cloud" src="images\cloud.png" alt="cloud-img">
@@ -20,7 +20,7 @@
   </div>
   <div class="middle-container">
     <div class="profile">
-      <img src="S:\Web Development projects\HTML - PERSONAL SITE\html\Shivam.jpg" alt="Shivam's image"width="200" height="200">
+      <img src="images\Shivam.jpg" alt="Shivam's image"width="200" height="200">
       <h2>Hello.</h2>
       <p><em>B.tech Student at <strong> Madan Mohan Malaviya University of Technology</strong>.</em></p>
         <p>I am a Web Devloper and <a href="https://github.com/shivam-26/">Compititive programer</a> .</p>
