--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <div class="top1-container">
-    <img class="images\cloud.png" alt="cloud-img">
+    <img class="botton-cloud" src="images\cloud.png" alt="cloud-img">
     <h1>I'm Shivam.</h1>
     <h2>a <span class="pro">pro</span>grammer.</h2>
     <img class="bottom-cloud" src="images\cloud.png" alt="cloud-img">
